# LinDet-SDK

./: LinDet-SDK.code-workspace  README.md
config/: analytics.yaml  camera.yaml  detection.yaml  pose.yaml  tracker.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
models/: README.md
src/lindet_analytics/: package.xml  setup.cfg  setup.py
src/lindet_analytics/lindet_analytics/: __init__.py  analytics_node.py  line_counter.py  speed_estimator.py  zone_intrusion.py
src/lindet_bringup/: CMakeLists.txt  package.xml
src/lindet_bringup/launch/: camera_only.launch.py  lindet_system.launch.py
src/lindet_camera/: CMakeLists.txt  package.xml
src/lindet_camera/include/lindet_camera/: gst_camera_node.hpp  gst_pipeline_builder.hpp
src/lindet_camera/src/: gst_camera_node.cpp  gst_pipeline_builder.cpp
src/lindet_detection/: CMakeLists.txt  package.xml
src/lindet_detection/include/lindet_detection/: detection_node.hpp  trt_engine.hpp
src/lindet_detection/src/: detection_node.cpp  trt_engine.cpp
src/lindet_msgs/: CMakeLists.txt  package.xml
src/lindet_msgs/msg/: AnalyticsEvent.msg  Detection2D.msg  Detection2DArray.msg  Keypoint2D.msg  Pose2D.msg  PoseArray2D.msg  TrackedObject2D.msg  TrackedObject2DArray.msg
src/lindet_pose/: package.xml  setup.cfg  setup.py
src/lindet_pose/lindet_pose/: __init__.py  pose_node.py
src/lindet_tracker/: package.xml  setup.cfg  setup.py
src/lindet_tracker/lindet_tracker/: __init__.py  byte_track.py  tracker_node.py
src/lindet_visualization/: package.xml  setup.cfg  setup.py
src/lindet_visualization/lindet_visualization/: __init__.py  drawing.py  viz_node.py
src/stereo_skeleton/: CMakeLists.txt  package.xml
src/stereo_skeleton/launch/: system.launch.py
src/stereo_skeleton/src/: dummy_processor_node.cpp  fake_camera_node.cpp
