<?xml version="1.0"?>
<package format="3">
  <name>lindet_detection</name>
  <version>1.0.0</version>
  <description>TensorRT-accelerated object detection node for LinDet-SDK.</description>
  <maintainer email="dev@lindet.local">LinDet Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>lindet_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
