<?xml version="1.0"?>
<package format="3">
  <name>lindet_visualization</name>
  <version>1.0.0</version>
  <description>Visualization overlay node for LinDet-SDK.</description>
  <maintainer email="dev@lindet.local">LinDet Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>lindet_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
